--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-# This is rubocop configuration file for Sun-Asterisk's coding style. Enabling and disabling is configured
+# This is rubocop configuration file for Sun-Asterisk"s coding style. Enabling and disabling is configured
 # in separate files. This file adds all other parameters apart from Enabled.
 
 # Add this to load Rails extension for rubocop
@@ -9,29 +9,52 @@ inherit_from:
   - .rubocop_enabled.yml
   - .rubocop_disabled.yml
 
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
+  SupportedStyles:
+    - single_quotes
+    - double_quotes
+
+Layout/TrailingEmptyLines:
+  Enabled: true
+
+Layout/EmptyLineBetweenDefs:
+  Enabled: true
+
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    default: ()
+    w: ()
+    i: ()
+
+Style/WordArray:
+  Enabled: true
+Style/SymbolArray:
+  Enabled: true
+
 # Common configuration.
 AllCops:
   # Include gemspec and Rakefile
   SuggestExtensions: false
   Include:
-    - 'app/**/*'
-    - 'lib/**/*'
-    - '**/*.gemspec'
-    - 'Gemfile'
+    - "app/**/*"
+    - "lib/**/*"
+    - "**/*.gemspec"
+    - "Gemfile"
   Exclude:
-    - 'vendor/**/*'
-    - 'config/unicorn.rb'
-    - 'bin/*'
-    - 'db/**/*'
-    - 'spec/**/*'
-    - 'script/rails'
-    - 'config/**/*'
-    - 'app/views/**/*'
-    - 'app/assets/**/*'
-    - 'app/javascript/**/*'
-    - '.idea/**/*'
-    - '**/.DS_Store'
-    - '**/.keep'
+    - "vendor/**/*"
+    - "config/unicorn.rb"
+    - "bin/*"
+    - "db/**/*"
+    - "spec/**/*"
+    - "script/rails"
+    - "config/**/*"
+    - "app/views/**/*"
+    - "app/assets/**/*"
+    - "app/javascript/**/*"
+    - ".idea/**/*"
+    - "**/.DS_Store"
+    - "**/.keep"
 
 # Indent private/protected/public as deep as method definitions
 Layout/AccessModifierIndentation:
@@ -45,14 +68,14 @@ Layout/HashAlignment:
   # Alignment of entries using hash rocket as separator. Valid values are:
   #
   # key - left alignment of keys
-  #   'a' => 2
-  #   'bb' => 3
+  #   "a" => 2
+  #   "bb" => 3
   # separator - alignment of hash rockets, keys are right aligned
-  #    'a' => 2
-  #   'bb' => 3
+  #    "a" => 2
+  #   "bb" => 3
   # table - left alignment of keys, hash rockets, and values
-  #   'a'  => 2
-  #   'bb' => 3
+  #   "a"  => 2
+  #   "bb" => 3
   EnforcedHashRocketStyle: key
   # Alignment of entries using colon as separator. Valid values are:
   #
@@ -179,11 +202,11 @@ Style/CollectionMethods:
   #   PreferredMethods:
   #     find: detect
   PreferredMethods:
-    collect: 'map'
-    collect!: 'map!'
-    inject: 'reduce'
-    detect: 'find'
-    find_all: 'select'
+    collect: "map"
+    collect!: "map!"
+    inject: "reduce"
+    detect: "find"
+    find_all: "select"
 
 # Checks formatting of special comments
 Style/CommentAnnotation:
@@ -207,7 +230,7 @@ Layout/DotPosition:
 
 # Use empty lines between defs.
 Layout/EmptyLineBetweenDefs:
-  # If true, this parameter means that single line method definitions don't
+  # If true, this parameter means that single line method definitions don"t
   # need an empty line between them.
   AllowAdjacentOneLineDefs: false
 
@@ -228,9 +251,9 @@ Layout/EmptyLinesAroundModuleBody:
 
 Naming/FileName:
   Exclude:
-    - '**/Rakefile'
-    - '**/Gemfile'
-    - '**/Capfile'
+    - "**/Rakefile"
+    - "**/Gemfile"
+    - "**/Capfile"
 
 # Checks use of for or each in multiline loops.
 Style/For:
@@ -282,7 +305,7 @@ Style/LambdaCall:
     - call
     - braces
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 80
   AllowURI: true
   Exclude:
@@ -292,7 +315,7 @@ Metrics/LineLength:
 Style/Next:
   # With `always` all conditions at the end of an iteration needs to be
   # replace by next - with `skip_modifier_ifs` the modifier if like this one
-  # are ignored: [1, 2].each { |a| return 'yes' if a == 1 }
+  # are ignored: [1, 2].each { |a| return "yes" if a == 1 }
   EnforcedStyle: skip_modifier_ifs
   SupportedStyles:
     - skip_modifier_ifs
@@ -336,15 +359,15 @@ Style/ParenthesesAroundCondition:
 
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
-    '%':  ()
-    '%i': ()
-    '%q': ()
-    '%Q': ()
-    '%r': '{}'
-    '%s': ()
-    '%w': ()
-    '%W': ()
-    '%x': ()
+    "%":  ()
+    "%i": ()
+    "%q": ()
+    "%Q": ()
+    "%r": "{}"
+    "%s": ()
+    "%w": ()
+    "%W": ()
+    "%x": ()
 
 Naming/PredicateName:
   ForbiddenPrefixes:
@@ -464,12 +487,12 @@ Style/TrailingCommaInHashLiteral:
     - consistent_comma
     - no_comma
 
-# TrivialAccessors doesn't require exact name matches and doesn't allow
+# TrivialAccessors doesn"t require exact name matches and doesn"t allow
 # predicated methods by default.
 Style/TrivialAccessors:
   ExactNameMatch: false
   AllowPredicates: false
-  # Allows trivial writers that don't end in an equal sign. e.g.
+  # Allows trivial writers that don"t end in an equal sign. e.g.
   #
   # def on_exception(action)
   #   @on_exception=action
