--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,3 +2,5 @@ links:
   rails_home: "http://www.railstutorial.org/"
   rails_help: "http://www.railstutorial.org/help"
   rails_book: "http://www.railstutorial.org/book"
+digits:
+  digit_6: 6
