--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,6 @@
+development:
+  app_name: "Sample_app"
+
 links:
   rails_home: "http://www.railstutorial.org/"
   rails_help: "http://www.railstutorial.org/help"
@@ -6,5 +9,10 @@ digits:
   digit_6: 6
 pagy:
   items: 10
+email:
+  from_address: "noreply@example.com"
+user_mailer:
+  host: localhost:3000
+  protocol: http
 sizes:
   size_80: 80
