--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Ignore all environment files.
 /.env*
 
+# Ignore uploaded test images
+/storage
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
